--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <ul class="nav-menu">
         <li class="logo"><a href="#"><span>Generic Company</span></a></li>
         <li class="item drop-down">
-            <a tabindex="0"><span>Services</span></a>
+            <a tabindex="0"><span tabindex="0">Services</span></a>
             <ul class="drop-down-menu">
                 <li class="drop-down-item"><a href="#"><span>Woodworking</span></a></li>
                 <li class="drop-down-item"><a href="#"><span>Metal Cutting</span></a></li>
